start fixing FS#61 - SUGGEST: markup in dropdown stops after first whitespace (mostly working, remains cleanup:)

--- a/plugins/firefox/chrome/content/skin/autocomplete.css
+++ b/plugins/firefox/chrome/content/skin/autocomplete.css
@@ -6,68 +6,12 @@
 }
 
 richlistitem[type ~= 'InstantFoxSuggest'] {
+	-moz-binding: url(chrome://instantfox/content/urlbar.xml#autocomplete-richlistitem) !important;
 	-moz-appearance: none;
 	border: none !important;
-	padding:2px;
-	min-height: 25px !important;
-	max-height: 22px !important;
-	overflow-y: hidden !important;
 }
-
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] spacer,
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] label{
-	display:none;
-}
-
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest']{
-	border:none!important;
-}
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] .ac-url{
-	display:none;
-}
-/*
-.ac-emphasize-text,
-.ac-emphasize-alt{
-	text-decoration:none !important;
-	font-weight:normal !important;
-	color:#F00 !important;
-}
-*/
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] html|span.ac-emphasize-text {
-	text-decoration:none !important;
-	font-weight:normal !important;
-}
-
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] html|span.ac-emphasize-alt {
-	text-decoration:none !important;
-} 
-
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] html|span.ac-emphasize-text:first-child {
+html|span.InstantFoxSuggest.ac-emphasize-text{
 	text-decoration:none !important;
 	font-weight:bold !important;
-	/*color:green;*/
+	color:#000 !important;
 }
-
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] html|span.ac-emphasize-alt:first-child {
-	text-decoration:none !important;
-	/*color:green;*/
-
-} 
-
-
-.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] .ac-url description[selected="true"]{
-	background-color: transparent;
-}
-
-
-/*
-	not needed :
-	
-	.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] .ac-title{
-	}
-	.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] .ac-title description{
-	}
-	
-	.autocomplete-richlistitem[type ~= 'InstantFoxSuggest'] .ac-url description{
-	}
-*/
